[package]
name = "flicbtn"
description = "Flic 2 Button Client Library written in Rust"
license = "MIT"
version = "0.1.0"
authors = ["Romeo Disca <romeo.disca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
num_enum = "0.4.2"
regex = "1"
tokio = { version = "0.2", features = ["full"] }
